// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Elipsis disables if shorter than limit 1`] = `
<Component
  disableHoverListener={true}
  interactive={false}
  placement="bottom-start"
  title="this is a sample text"
>
  <WithStyles(ForwardRef(Typography))
    className="makeStyles-content-1"
    variant="caption"
  >
    this is a sample text
  </WithStyles(ForwardRef(Typography))>
</Component>
`;

exports[`Elipsis renders with custom size 1`] = `
<Component
  disableHoverListener={false}
  interactive={false}
  placement="bottom-start"
  title="this is a sample text"
>
  <WithStyles(ForwardRef(Typography))
    className="makeStyles-content-1"
    variant="caption"
  >
    this ...
  </WithStyles(ForwardRef(Typography))>
</Component>
`;

exports[`Elipsis renders with placement bottom 1`] = `
<Component
  disableHoverListener={false}
  interactive={false}
  placement="bottom"
  title="this is a sample text"
>
  <WithStyles(ForwardRef(Typography))
    className="makeStyles-content-1"
    variant="caption"
  >
    this ...
  </WithStyles(ForwardRef(Typography))>
</Component>
`;

exports[`Elipsis renders with placement bottom-end 1`] = `
<Component
  disableHoverListener={false}
  interactive={false}
  placement="bottom-end"
  title="this is a sample text"
>
  <WithStyles(ForwardRef(Typography))
    className="makeStyles-content-1"
    variant="caption"
  >
    this ...
  </WithStyles(ForwardRef(Typography))>
</Component>
`;

exports[`Elipsis renders with placement bottom-start 1`] = `
<Component
  disableHoverListener={false}
  interactive={false}
  placement="bottom-start"
  title="this is a sample text"
>
  <WithStyles(ForwardRef(Typography))
    className="makeStyles-content-1"
    variant="caption"
  >
    this ...
  </WithStyles(ForwardRef(Typography))>
</Component>
`;
